# pg2_Parcial3

./: LICENSE  README.md  setup.cfg
core/: persona.py
validators/: base.py  datos_contacto.py  datos_personales.py
