[metadata]
name = nombre_apellido_pg2_tecba
version = 0.0.1
author = Tu Nombre
author_email = tu_email@example.com
description = Librería de validación y clase Persona para PG2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tu_usuario/pg2_parcial3
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
